Link to GitHub added

--- a/index.html
+++ b/index.html
@@ -189,7 +189,12 @@
       </div>
 
       <footer>
-        <p>Source code by Kathrin Hesse</p>
+        <p>
+          <a href="https://github.com/breezeHH/weather-app" target="_blank"
+            >Open-source code</a
+          >
+          by Kathrin Hesse
+        </p>
       </footer>
     </div>
 
