time for update, sunrise and sunset added

--- a/index.html
+++ b/index.html
@@ -128,8 +128,14 @@
                   <span id="wind"></span>
                   km/h
                 </li>
-                <li class="list-group-item">Sunrise: 06:18</li>
-                <li class="list-group-item">Sunset: 15:48</li>
+                <li class="list-group-item">
+                  Sunrise:
+                  <span id="sunrise"></span>
+                </li>
+                <li class="list-group-item">
+                  Sunset:
+                  <span id="sunset"></span>
+                </li>
               </ul>
             </div>
           </div>
@@ -183,7 +189,10 @@
             </ul>
           </div>
           <div class="update-status">
-            <p>Last Update 11:55</p>
+            <p>
+              Last Update
+              <span id="update"></span>
+            </p>
           </div>
         </div>
       </div>
