--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
         <div class="row">
           <div class="col-6">
             <img
-              src="images/tag-leicht-bewölkt.png"
+              src=""
               alt="Leicht bewölkt"
               class="current-icon"
+              id="current-icon"
             />
           </div>
         </div>
