preparation for integration of forecast

--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
         <div class="row">
           <div class="col">
             <div class="city">
-              <h2 id="city"></h2>
+              <h1 id="city"></h1>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col">
-            <p id="country"></p>
+            <div id="country"></div>
           </div>
         </div>
         <div class="row">
           <div class="col">
-            <h4 id="date"></h4>
+            <div class="date" id="date"></div>
           </div>
         </div>
         <div class="row">
@@ -115,7 +115,6 @@
             </ul>
           </div>
         </div>
-
         <div class="row">
           <div class="col-6">
             <div class="card">
@@ -141,61 +140,16 @@
               </ul>
             </div>
           </div>
-          <div class="col-6">
-            <ul class="forecast">
-              <li class="forecast-day">
-                <h4>MON</h4>
-                <img
-                  src="images/tag-leicht-bewölkt.png"
-                  alt="Partly cloudy"
-                  class="forecast-icon"
-                />
-                13 °C
-              </li>
-              <li class="forecast-day">
-                <h4>TUE</h4>
-                <img
-                  src="images/tag-leicht-bewölkt.png"
-                  alt="Partly cloudy"
-                  class="forecast-icon"
-                />
-                12 °C
-              </li>
-              <li class="forecast-day">
-                <h4>WED</h4>
-                <img
-                  src="images/regen-wolke.png"
-                  alt="light rain"
-                  class="forecast-icon"
-                />
-                10 °C
-              </li>
-              <li class="forecast-day">
-                <h4>THU</h4>
-                <img
-                  src="images/tag-leicht-bewölkt.png"
-                  alt="Partly cloudy"
-                  class="forecast-icon"
-                />
-                9 °C
-              </li>
-              <li class="forecast-day">
-                <h4>FRI</h4>
-                <img
-                  src="images/regen-wolke.png"
-                  alt="light rain"
-                  class="forecast-icon"
-                />
-                11 °C
-              </li>
-            </ul>
-          </div>
-          <div class="update-status">
-            <p>
-              Last Update
-              <span id="update"></span>
-            </p>
-          </div>
+        </div>
+
+        <div class="weather-forecast" id="forecast"></div>
+
+        <div class="update-status">
+          <p>
+            <br />
+            Last Update
+            <span id="update"></span>
+          </p>
         </div>
       </div>
 
