Integration API forecast call & css adjustments

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="col-6">
               <input
                 type="search"
-                placeholder="Search for a City..."
+                placeholder="Search for a City"
                 autofocus="on"
                 autocomplete="off"
                 id="city-input"
