Updated html & css

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="col-6">
             <img
               src=""
-              alt="Leicht bewölkt"
+              alt="partly cloudy"
               class="current-icon"
               id="current-icon"
             />
@@ -152,7 +152,7 @@
           <a href="https://github.com/breezeHH/weather-app" target="_blank"
             >Open-source code</a
           >
-          by Kathrin
+          by Kathrin and hosted on Netlify.
         </p>
       </footer>
     </div>
