Link to Netlify added

--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
           <a href="https://github.com/breezeHH/weather-app" target="_blank"
             >Open-source code</a
           >
-          by Kathrin and hosted on Netlify.
+          by Kathrin and hosted on
+          <a href="https://frosty-bassi-3de282.netlify.app/" target="_blank"
+            >Netlify</a
+          >.
         </p>
       </footer>
     </div>
